--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,8 +20,10 @@ set-window-option -g window-status-current-bg default
 set -g status-bg default
 set-window-option -g window-status-current-attr bright
 
-set -g status-left " "
+set -g status-left "#{prefix_highlight}"
 set -g status-right " "
+set -g @prefix_highlight_empty_prompt '     '
+
 
 setw -g window-status-format         ' #(echo "#{pane_current_command}") '
 setw -g window-status-current-format ' #(echo "#{pane_current_command}") '
@@ -62,3 +64,9 @@ bind-key L resize-pane -R 5
 # Close panes/windows without confirmation
 bind-key & kill-window
 bind-key x kill-pane
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+run -b '~/.tmux/plugins/tpm/tpm'
