--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,9 +5,21 @@ bind-key C-a send-prefix
 
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+set-window-option -g automatic-rename off
+set-option -g allow-rename off
+
 # Set default term to xterm
 set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+
+# address vim mode switching delay (http://superuser.com/a/252717/65504)
+set -s escape-time 0
+
+# increase scrollback buffer size
+set -g history-limit 50000
+
+# tmux messages are displayed for 4 seconds
+set -g display-time 4000
 
 # Reload config file
 bind r source-file ~/.tmux.conf
@@ -25,8 +37,8 @@ set -g status-right " "
 set -g @prefix_highlight_empty_prompt '     '
 
 
-setw -g window-status-format         ' #(echo "#{pane_current_command}") '
-setw -g window-status-current-format ' #(echo "#{pane_current_command}") '
+# setw -g window-status-format         ' #(echo "#{pane_current_command}") '
+# setw -g window-status-current-format ' #(echo "#{pane_current_command}") '
 
 # Split panes using | and -
 bind | split-window -h
