--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,17 +3,30 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# Enable mouse scolling
+set -g mouse on
 
-set-window-option -g automatic-rename off
-set-option -g allow-rename off
+# Sane mouse scrolling
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
+# set-window-option -g automatic-rename off
+# set-option -g allow-rename off
 
 # Set default term to xterm
 set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+# set -ga terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+
+# Allows cursor shape to change
+# set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
-set -s escape-time 0
+set -sg escape-time 0
+
+# Use vi key bindings in copy mode.
+setw -g mode-keys vi
 
 # increase scrollback buffer size
 set -g history-limit 50000
@@ -31,14 +44,15 @@ set-window-option -g window-status-current-fg "#E06C75"
 set-window-option -g window-status-current-bg default
 set -g status-bg default
 set-window-option -g window-status-current-attr bright
+set -g status-justify centre
 
 set -g status-left "#{prefix_highlight}"
 set -g status-right " "
 set -g @prefix_highlight_empty_prompt '     '
 
 
-# setw -g window-status-format         ' #(echo "#{pane_current_command}") '
-# setw -g window-status-current-format ' #(echo "#{pane_current_command}") '
+setw -g window-status-format         ' #(echo "#{pane_current_command}") '
+setw -g window-status-current-format ' #(echo "#{pane_current_command}") '
 
 # Split panes using | and -
 bind | split-window -h
@@ -61,16 +75,10 @@ bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
 
-# Alt+arrows to change pane
-# bind -n M-Left select-pane -L
-# bind -n M-Right select-pane -R
-# bind -n M-Up select-pane -U
-# bind -n M-Down select-pane -D
-
 # Resizing panes
+bind-key H resize-pane -L 5
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
 
 # Close panes/windows without confirmation
@@ -80,5 +88,7 @@ bind-key x kill-pane
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 run -b '~/.tmux/plugins/tpm/tpm'
