--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 # set -ga terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # Allows cursor shape to change
-# set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -sg escape-time 0
